--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -25,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.9.2",
@@ -36,6 +38,7 @@
     "mapbox-gl": "^3.16.0",
     "pako": "2.1.0",
     "react": "^19.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
     "react-map-gl": "^8.1.0",
     "react-markdown": "9",
